--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,9 +1,3 @@
 body{
-    background-image: url("https://i.ytimg.com/vi/wVCuNtZNBH4/maxresdefault.jpg");
-    /* background-image: url("https://i.ytimg.com/vi/6qG_hhFOUX4/maxresdefault.jpg"); */
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height:100vh;
-    overflow-y: hidden;
+    background-image: linear-gradient(to bottom, black, rgb(8, 8, 75));
 }
